# pyspec

./: .gitignore  LICENSE  Makefile  README.md  justfile  pyproject.toml
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
notebooks/: 1.0-ls-initial-data-training.ipynb  2.0-ls-data-exploration.ipynb  2.0-ls-data-exploration.py  3.0-ls-model-manipulation.ipynb  4.0-ls-showcase-first-Copy1.ipynb  4.0-ls-showcase-first.ipynb  5.0-ls-pre-processing-comparison.ipynb  6.0-ls-normalization-compare.ipynb  6.0-ls-normalization-compare.py
pyspectral/: __init__.py  cli.py  config.py  core.py  dataset.py  features.py  plots.py  types.py
pyspectral/data/: dataset.py  features.py  io.py  preprocessing.py  shared.py  simulations.py
pyspectral/modeling/: models.py  oof.py  predict.py  train.py
pyspectral/result/: class_ml.py  class_trad.py  compare.py  plots.py  predict.py  spec_class_ml.py  spec_class_trad.py  spec_spec_ml.py  spec_spec_trad.py
reports/: .gitignore
tests/: test_compare.py  test_data.py  test_features.py  test_oof.py  test_plot.py
